--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,3 +1,4 @@
+/* This is how you comment out in css */
 @import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Chango&display=swap');
 
 body {
@@ -12,7 +13,7 @@ body {
     --accent1-color: #00C4EB;
     --accent2-color: #FF4800;
 
-    --heading-fomt: 'Chango', serif;
+    --heading-font: 'Chango', serif;
     --paragrapgh-font: 'Afacad', serif;
 
     --nav-background-color: #000447;
