--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,17 +6,24 @@
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
-    display: block; 
-    padding: 20px;
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff; 
 }
 
 h1 {
     color: steelblue;
+    /* border-bottom:  */
 }
 
 main img {
@@ -33,18 +40,23 @@ p {
 }
 
 main {
-    max-width: 840px;
+    grid-column: 2/3;
+    margin: 1rem;
+    /* max-width: 840px; */
 }
 
 aside {
     width: 20em;
-    margin: 1rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    /* margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
     background-color: #eee;
     color: #333;
     text-align: center;
-    position: relative;
+    position: relative; */
 }
 
 aside h2 {
@@ -54,14 +66,23 @@ aside h2 {
 }
 
 aside img {
-    width: 200px;
-    height: auto;
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    /* width: 200px; */
+    /* height: auto; */
 }
 
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 /* Class Selectors */
@@ -74,3 +95,7 @@ footer {
     color: #000;
 }
 
+.grid {
+    display: grid;
+    align-items: center;
+}
