--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -9,7 +9,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     padding: 20px;
-    display: flex;
+    display: center;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -18,7 +18,7 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-}
+} 
 
 form {
     background-color: #fff;
@@ -48,13 +48,10 @@ input[type="text"], input[type="number"], textarea, select, button {
 }
 
 button {
-    background-color: #5cb85c;
+    background-color: #060769;
     color: #fff;
     border: none;
-    cursor: pointer;
+    /* cursor: pointer; */
     font-size: 16px;
 }
 
-button:hover {
-    background-color: #4cae4c;
-}
