--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,10 +8,10 @@ body {
 }
 
 :root {
-    --primary-color: #000447;
+    --primary-color: #FF4800;
     --secondary-color: #FFB300;
     --accent1-color: #00C4EB;
-    --accent2-color: #FF4800;
+    --accent2-color: #000447;
 
     --heading-font: 'Chango', serif;
     --paragrapgh-font: 'Afacad', serif;
