--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -142,7 +142,7 @@ body, h1, form, input, textarea, select, button {
 }
 
 body {
-  font-family: Arial, sans-serif; /* Ensure font-family is set */
+  font-family: Arial, sans-serif; 
   background-color: #f4f4f4;
   padding: 20px;
   justify-content: center;
@@ -153,6 +153,37 @@ body {
 h1 {
   text-align: left;
   margin-bottom: 20px;
+}
+
+.contact-container {
+  display: flex;
+  max-width: 1200px;
+  width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  gap: 20px; /* Space between the contact info and map */
+}
+
+.contact-info {
+  flex: 1;
+}
+
+.map {
+  flex: 1;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+@media (max-width: 768px) {
+  .contact-container {
+      flex-direction: column;
+  }
 }
 
 form {
