--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -257,4 +257,143 @@ button {
   margin-left: 10px; /*add space between input and label */
 }
 
+/*employees*/
+.employee-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  gap: 20px; /* Space between items */
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8); /* Background color with transparency */
+  border-radius: 5px;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.employee {
+  text-align: center;
+}
+
+.employee img {
+  /*width: 150px;
+  height: auto;*/
+  border-radius: 5px;
+}
+
+.employee h3 {
+  margin: 10px 0 5px;
+  color: var(--primary-color); /* Use primary color for names */
+  font-family: var(--paragraph-font);
+  /*font-family: var(--heading-font);*/
+}
+
+.employee p {
+  margin: 0;
+  color: var(--accent2-color); /* Use accent2 color for titles */
+  font-family: var(--paragraph-font);
+}
+
+/* Styles for Trips page */
+
+.hero {
+  position: relative;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.hero h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 7em;
+  color: #fff;
+  text-shadow: 2px 2px 4px #000447;
+  z-index: 1;
+}
+
+.hero img {
+  width: 100%;
+  height: auto;
+}
+
+.call-to-action {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.call-to-action .cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--primary-color);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.call-to-action .cta-button:hover {
+  background-color: var(--secondary-color);
+}
+
+.trip-details {
+  /*display: flex;
+  flex-wrap: wrap;*/
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.trip {
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.trip img {
+  width: 100%; 
+  height: 200px;
+  object-fit: cover; 
+  border-radius: 8px;
+}
+
+.trip h2 {
+  font-family: var(--heading-font);
+  margin: 10px 0;
+  
+}
+
+.trip p {
+  font-family: var(--paragraph-font);
+  color: var(--accent2-color);
+}
+
+.trip-table {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.trip-table table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.trip-table th, .trip-table td {
+  padding: 10px;
+  border: 1px solid var(--accent2-color);
+}
+
+.trip-table th {
+  background-color: var(--nav-background-color);
+  color: var(--secondary-color);
+}
+
+.trip-table td {
+  background-color: #fff;
+}
+
+.trip-table a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
 
